---
title: ResBack - Core Class Diagram
---
classDiagram
    direction TB

    class User {
        <<Eloquent model>>
        +int id
        +string name
        +string? first_name
        +string? middle_name
        +string? last_name
        +string? profile_photo_path
        +string email
        +string password
        +string role
        +bool is_active
        +isAdmin() bool
        +isSuperAdmin() bool
        +isFaculty() bool
        +isStudent() bool
        +feedbacks() HasMany
        +getDisplayFirstNameAttribute() string
        +getProfilePhotoUrlAttribute() string?
    }

    class Feedback {
        <<Eloquent model>>
        +int id
        +int? user_id
        +int? category_id
        +string content
        +string? ip_hash
        +string status
        +user() BelongsTo
        +category() BelongsTo
        +sentimentResult() HasOne
        +scopePending(query)
        +scopeAnalyzed(query)
        +scopeReportable(query)
    }

    class Category {
        <<Eloquent model>>
        +int id
        +string name
        +string slug
        +string? icon
        +string? description
        +bool is_active
        +ccis()$ Category
        +feedbacks() HasMany
        +concernRankings() HasMany
        +scopeActive(query)
    }

    class SentimentResult {
        <<Eloquent model>>
        +int id
        +int feedback_id
        +string sentiment
        +float confidence
        +array? keywords
        +array? concern_topics
        +array? detected_languages
        +string? language_category
        +float? language_confidence
        +array? raw_response
        +feedback() BelongsTo
        +getConfidencePercentAttribute() string
    }

    class ConcernRanking {
        <<Eloquent model>>
        +int id
        +int category_id
        +string keyword
        +int frequency
        +int positive_count
        +int neutral_count
        +int negative_count
        +float critical_score
        +float negative_ratio
        +float average_negative_confidence
        +float recency_score
        +datetime? latest_feedback_at
        +datetime? ranked_at
        +category() BelongsTo
        +getDominantSentimentAttribute() string
    }

    User "0..1" -- "0..*" Feedback : submits
    Category "0..1" -- "0..*" Feedback : groups
    Feedback "1" *-- "0..1" SentimentResult : has analysis
    Category "1" -- "0..*" ConcernRanking : has rankings

%% Source: app/Models/*.php and database/migrations, inspected 2026-09-24.
%% Public attributes represent Eloquent dynamic properties; not declared PHP fields.
%% Nullable attributes use ?. Framework base classes, traits, timestamps and auth
%% bookkeeping are omitted. User extends Authenticatable; other models extend Model.
%% User.role = student | faculty | admin | super_admin. These are not subclasses.
%% Feedback.status = pending | analyzed | failed | rejected.
%% SentimentResult.sentiment = positive | neutral | negative.
%% Feedback -> SentimentResult is the Eloquent hasOne contract. The database FK
%% is not unique, so migrations alone do not enforce one result per feedback.
%% Removing Feedback cascades to its SentimentResult. User/category deletion
%% sets nullable Feedback FKs to null; category deletion cascades ranking rows.
%% ConcernRanking has a composite unique key on (category_id, keyword).
